force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/TimeTrade_SF1__TTLinkalatorSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TimeTrade Cathedral Settings</label>
</CustomObject>