force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__AnonymousEnterpriseClient__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__AnonymousEnterpriseClient__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you do not want identifying information, including name, phone nNumber, and email, of clients booking meetings to be recorded on TimeTrade servers.  With this option, for GDPR compliance, you will not have to manually purge client info.</inlineHelpText>
    <label>Anonymous Clients on TimeTrade Servers</label>
    <type>Checkbox</type>
</CustomField>