force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Create_External_Attendee_as_Lead_Contact__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Create_External_Attendee_as_Lead_Contact__c</fullName>
    <description>Enter &quot;Lead&quot;, &quot;Contact&quot;, or &quot;Person Account&quot; to create a new record for any external attendee that do not already exist in your Salesforce instance; Leave blank if you do not want to create new records for new attendees.</description>
    <inlineHelpText>Enter &quot;Lead&quot;, &quot;Contact&quot;, or &quot;Person Account&quot; to create a new record for any external attendee that do not already exist in your Salesforce instance; Leave blank if you do not want to create new records for new attendees.</inlineHelpText>
    <label>External Attendee Create As</label>
    <length>50</length>
    <type>Text</type>
</CustomField>