force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__CTS_Account__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__CTS_Account__c</fullName>
    <description>Enter the Salesforce ID of an Account that will own any Contact created by TimeTrade Scheduler.  Be sure to set this value when the External Attendee Create As is set to &quot;Contact&quot;.</description>
    <inlineHelpText>Enter the Salesforce ID of an Account that will own any Contact created by TimeTrade Scheduler.  Be sure to set this value when the External Attendee Create As is set to &quot;Contact&quot;.</inlineHelpText>
    <label>CTS Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>