force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__CTS_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__CTS_Site_URL__c</fullName>
    <description>Enter the base URL for the Salesforce ClickToSchedule site.</description>
    <inlineHelpText>Enter the base URL for the Salesforce ClickToSchedule site.</inlineHelpText>
    <label>CTS Site URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>