force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Custom_Availability_Busy_Granularity__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Busy_Granularity__c</fullName>
    <defaultValue>&#39;30Minutes&#39;</defaultValue>
    <inlineHelpText>Enter &quot;30Minutes&quot; for all typical installations.  This value must match a setting in TimeTrade&#39;s servers; do not change this value without consulting TimeTrade Support.</inlineHelpText>
    <label>Custom Availability Busy Granularity</label>
    <length>64</length>
    <type>Text</type>
</CustomField>