force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Custom_Availability_Grid_End_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Grid_End_Time__c</fullName>
    <defaultValue>&quot;17:00&quot;</defaultValue>
    <inlineHelpText>Enter the daily end time for the custom availability in &quot;HH:mm&quot; 24-hour format, typically &quot;17:00&quot; for normal day and &quot;20:00&quot; for extended day.  Consult TimeTrade support before using of any  other value.</inlineHelpText>
    <label>Custom Availability Grid End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>