force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Custom_Availability_Grid_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Grid_Start_Time__c</fullName>
    <defaultValue>&quot;09:00&quot;</defaultValue>
    <description>Enter the daily start time for the custom availability in &quot;HH:mm&quot; 24-hour format, typically &quot;09:00&quot; for normal day and &quot;07:00&quot; for extended day.  Consult TimeTrade support before using of any other value.</description>
    <inlineHelpText>Enter the daily start time for the custom availability in &quot;HH:mm&quot; 24-hour format, typically &quot;09:00&quot; for normal day and &quot;07:00&quot; for extended day.  Consult TimeTrade support before using of any other value.</inlineHelpText>
    <label>Custom Availability Grid Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>