force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Custom_Availability_Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Hours_Per_Day__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Enter &quot;8&quot; when not using extended day for custom availability and 13&quot; for extended day.  Alter the appropriate value only if you have worked with TimeTrade Support to change the length of your extended work day.</description>
    <inlineHelpText>Enter &quot;8&quot; when not using extended day for custom availability and 13&quot; for extended day.  Alter the appropriate value only if you have worked with TimeTrade Support to change the length of your extended work day.</inlineHelpText>
    <label>Custom Availability Hours Per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>