force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Custom_Availability_Program_External_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Program_External_ID__c</fullName>
    <defaultValue>&quot;li&quot;</defaultValue>
    <description>Enter &quot;li&quot; to speciy normal day length for custom availability or &quot;ex&quot; to specifiy extended day length for custom availability.</description>
    <inlineHelpText>Enter &quot;li&quot; to speciy normal day length for custom availability or &quot;ex&quot; to specifiy extended day length for custom availability.</inlineHelpText>
    <label>Custom Availability Program ExternalID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>