force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Disable_Optional_Attendees__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Disable_Optional_Attendees__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you wish to disable the optional attendee feature so that all internal Users will always be required and the user will not have to option to change internal attendees to optional.</inlineHelpText>
    <label>Disable Optional Attendees</label>
    <type>Checkbox</type>
</CustomField>