force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Display_GDPR_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Display_GDPR_Disclaimer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box to display GDPR Compliance text on the Click-to-Schedule page.  Check your organization&#39;s GDPR compliance policies before unchecking this box.</description>
    <inlineHelpText>Check this box to display GDPR Compliance text on the Click-to-Schedule page.  Check your organization&#39;s GDPR compliance policies before unchecking this box.</inlineHelpText>
    <label>Display GDPR Disclaimer</label>
    <type>Checkbox</type>
</CustomField>