force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Email_Template_Callout_Alt_text__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Email_Template_Callout_Alt_text__c</fullName>
    <description>Enter alternative text for the header image for invitation email.  This is normally your company name.</description>
    <inlineHelpText>Enter alternative text for the header image for invitation email.  This is normally your company name.</inlineHelpText>
    <label>Email Template Callout Image Alt Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>