force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Email_Template_Callout_Image_Height__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Email_Template_Callout_Image_Height__c</fullName>
    <description>Enter the height of your image for the invitation callout email specifically which should be set to half the size of the general image height.</description>
    <inlineHelpText>Enter the height of your image for the invitation callout email specifically which should be set to half the size of the general image height.</inlineHelpText>
    <label>Email Template Callout Image Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>