force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Email_Template_Header_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Email_Template_Header_Background_Color__c</fullName>
    <description>Enter hex color code with #, such as #FFAAAA, to set the background color of the header bar on TimeTrade email templates.</description>
    <inlineHelpText>Enter hex color code with #, such as #FFAAAA, to set the background color of the header bar on TimeTrade email templates.</inlineHelpText>
    <label>Email Template Background Color Header</label>
    <length>100</length>
    <type>Text</type>
</CustomField>