force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__EmailTemplate_BackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__EmailTemplate_BackgroundColor__c</fullName>
    <description>Enter hex color code with #, such as #FFAAAA, to set the background color of the status bar on TimeTrade email templates.</description>
    <inlineHelpText>Enter hex color code with #, such as #FFAAAA, to set the background color of the status bar on TimeTrade email templates.</inlineHelpText>
    <label>Email Template Background Color Status</label>
    <length>12</length>
    <type>Text</type>
</CustomField>