force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__EmailTemplate_Color__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__EmailTemplate_Color__c</fullName>
    <description>Enter hex color code with #, such as #FFAAAA, to set the text color for the status and footer bar on TimeTrade email templates.</description>
    <inlineHelpText>Enter hex color code with #, such as #FFAAAA, to set the text color for the status and footer bar on TimeTrade email templates.</inlineHelpText>
    <label>Email Template Text Color Status/Footer</label>
    <length>12</length>
    <type>Text</type>
</CustomField>