force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__EmailTemplate_Image__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__EmailTemplate_Image__c</fullName>
    <description>Enter the URL of publicly-accessible image that will be used as the header logo on all other TimeTrade email.  This may a public-enabled file in Salesforce Documents or an image hosted on your public website.</description>
    <inlineHelpText>Enter the URL of publicly-accessible image that will be used as the header logo on all other TimeTrade email.  This may a public-enabled file in Salesforce Documents or an image hosted on your public website.</inlineHelpText>
    <label>Email Template Image URL</label>
    <type>Url</type>
</CustomField>