force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__EmailTemplate_Image_Alt__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__EmailTemplate_Image_Alt__c</fullName>
    <description>Enter alternative text for the header image for all other TimeTrade email.  This is normally your company name.</description>
    <inlineHelpText>Enter alternative text for the header image for all other TimeTrade email.  This is normally your company name.</inlineHelpText>
    <label>Email Template Image Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>