force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__EmailTemplate_Image_Height__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__EmailTemplate_Image_Height__c</fullName>
    <description>Enter the desired height in pixels for the image specified by Email Template Image URL.</description>
    <inlineHelpText>Enter the desired height in pixels for the image specified by Email Template Image URL.</inlineHelpText>
    <label>Email Template Image Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>