force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Enable_Recovery_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Enable_Recovery_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this option to enable the Recovery Time processing that may reserve internal attendee time after the specified duration of a meeting.</description>
    <inlineHelpText>Check this option to enable the Recovery Time processing that may reserve internal attendee time after the specified duration of a meeting.</inlineHelpText>
    <label>Enable Recovery Time</label>
    <type>Checkbox</type>
</CustomField>