force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Enable_Recovery_Time_Visibility__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Enable_Recovery_Time_Visibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this option to display and allow editing of Recovery Time when creating invitations.</description>
    <inlineHelpText>Check this option to display and allow editing of Recovery Time when creating invitations.</inlineHelpText>
    <label>Enable Recovery Time Visibility</label>
    <type>Checkbox</type>
</CustomField>