force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Enable_Salesforce_Calendar_Sync__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Enable_Salesforce_Calendar_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable TimeTrade Salesforce Calendar Sync.  These features allows non-TimeTrade Events to be pushed to TimeTrade.  Do not enable this feature if you have an existing calendar integration configured within TimeTrade.</description>
    <inlineHelpText>Check this box to enable TimeTrade Salesforce Calendar Sync.  These features allows non-TimeTrade Events to be pushed to TimeTrade.  Do not enable this feature if you have an existing calendar integration configured within TimeTrade.</inlineHelpText>
    <label>Enable Salesforce Calendar Sync</label>
    <type>Checkbox</type>
</CustomField>