force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Enable_Web_Conferencing_Integration__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Enable_Web_Conferencing_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable Web Conference as an available location type on Create Invitation.</description>
    <inlineHelpText>Check this box to enable Web Conference as an available location type on Create Invitation.</inlineHelpText>
    <label>Enable Web Conferencing Integration</label>
    <type>Checkbox</type>
</CustomField>