force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Generate_Secure_IDs__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Generate_Secure_IDs__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this option to generate enhanced Invitation and Event IDs when additional security is required.</inlineHelpText>
    <label>Generate Secure IDs</label>
    <type>Checkbox</type>
</CustomField>