force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Generic_Email_for_Organizer__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Generic_Email_for_Organizer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option is deprecated; please use the field on Invitation Template.</description>
    <inlineHelpText>This option is deprecated. Please use the field on Invitation Template.</inlineHelpText>
    <label>Generic Email for Organizer - Not Used</label>
    <type>Checkbox</type>
</CustomField>