force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Google_Map_API_Key__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Google_Map_API_Key__c</fullName>
    <description>Enter your Google Maps API Key to enable Google Maps on the Create Invitation page.  Please consult Google documentation for information on obtaining a key.</description>
    <inlineHelpText>Enter your Google Maps API Key to enable Google Maps on the Create Invitation page.  Please consult Google documentation for information on obtaining a key.</inlineHelpText>
    <label>Google Map API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>