force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__GoToMeeting_Additional_Numbers_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GoToMeeting_Additional_Numbers_URL__c</fullName>
    <description>Optionally enter the GoToMeeting URL that will display additional GoToMeeting dial-in numbers.</description>
    <inlineHelpText>Optionally enter the GoToMeeting URL that will display additional GoToMeeting dial-in numbers.</inlineHelpText>
    <label>GoToMeeting Additional Numbers URL</label>
    <type>Url</type>
</CustomField>