force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__GoToMeeting_Admin_Username__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GoToMeeting_Admin_Username__c</fullName>
    <description>Enter the username for your GoToMeeting admin credentials.</description>
    <inlineHelpText>Enter the username for your GoToMeeting admin credentials.</inlineHelpText>
    <label>GoToMeeting Admin Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>