force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__GoToMeeting_API_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GoToMeeting_API_Client_Secret__c</fullName>
    <description>Enter Client Secret for Oauth2 obtained from GTM Developer Center.  See https://goto-developer.logmeininc.com for GoToMeeting information.</description>
    <inlineHelpText>Enter Client Secret for Oauth2 obtained from GTM Developer Center.  See https://goto-developer.logmeininc.com for GoToMeeting information.</inlineHelpText>
    <label>GoToMeeting API Client Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>