force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__GoToMeeting_API_Customer_Key__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GoToMeeting_API_Customer_Key__c</fullName>
    <description>Enter Customer Key from GTM Developer Center.  See https://goto-developer.logmeininc.com for GoToMeeting information.</description>
    <inlineHelpText>Enter Customer Key from GTM Developer Center.  See https://goto-developer.logmeininc.com for GoToMeeting information.</inlineHelpText>
    <label>GoToMeeting API Customer Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>