force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__GoToMeeting_DialIn_Number__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__GoToMeeting_DialIn_Number__c</fullName>
    <description>If using, enter your dedicated GTM dial-in number.</description>
    <inlineHelpText>If using, enter your dedicated GTM dial-in number.</inlineHelpText>
    <label>GoToMeeting DialIn Number</label>
    <type>Phone</type>
</CustomField>