force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Attachment_on_Create_Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Attachment_on_Create_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable allowing attachments to be added on the Create Invitation page.</description>
    <inlineHelpText>Check this box to disable allowing attachments to be added on the Create Invitation page.</inlineHelpText>
    <label>Hide Attachment on Create Invitation</label>
    <type>Checkbox</type>
</CustomField>