force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Client_Entry_Fields_on_Public_CTS__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Client_Entry_Fields_on_Public_CTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this option to hide client entry fields on Click-To-Schedule for public invitations when client information is provided by a parameter. Note that page will be cleared and will revert to data entry of client not found or has incomplete information.</description>
    <inlineHelpText>Check this option to hide client entry fields on Click-To-Schedule for public invitations when client information is provided by a parameter. Note that page will be cleared and will revert to data entry of client not found or has incomplete information.</inlineHelpText>
    <label>Hide Client Entry Fields on Public CTS</label>
    <type>Checkbox</type>
</CustomField>