force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Client_Info_on_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Client_Info_on_Meeting_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to hide all client information on the Click-to-Schedule and Meeting Status pages.</description>
    <inlineHelpText>Check this box to hide all client information on the Click-to-Schedule and Meeting Status pages.</inlineHelpText>
    <label>Hide Client Info on CTS and Status Pages</label>
    <type>Checkbox</type>
</CustomField>