force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_External_Attendee_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_External_Attendee_Email_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to suppress email addresses for all external meeting attendees on the Click-to-Schedule page, Meeting Status page, and all TimeTrade emails.  Leave unchecked if you wish external attendee email addresses to be displayed.</description>
    <inlineHelpText>Check this box to suppress email addresses for all external meeting attendees on the Click-to-Schedule page, Meeting Status page, and all TimeTrade emails.  Leave unchecked if you wish external attendee email addresses to be displayed.</inlineHelpText>
    <label>Hide External Attendee Email Addresses</label>
    <type>Checkbox</type>
</CustomField>