force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Invite_Others_Section_on_CTS__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Invite_Others_Section_on_CTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you do not want the Invite Others in your Organization section to appear on the Click-to-Schedule page.</description>
    <inlineHelpText>Check this box if you do not want the Invite Others in your Organization section to appear on the Click-to-Schedule page.</inlineHelpText>
    <label>Hide Invite Others Section on CTS</label>
    <type>Checkbox</type>
</CustomField>