force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Lead_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Lead_Company_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you do not want the Company Name field to appear and be required on the Click-to-Schedule page when the External Attendee Create As option is set to &quot;Lead.&quot;</description>
    <inlineHelpText>Check this box if you do not want the Company Name field to appear and be required on the Click-to-Schedule page when the External Attendee Create As option is set to &quot;Lead.&quot;</inlineHelpText>
    <label>Hide Lead Company Name</label>
    <type>Checkbox</type>
</CustomField>