force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Organizer_Notes_on_Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Organizer_Notes_on_Meeting_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to hide the Organizer Notes section on the Meeting Status page.</description>
    <inlineHelpText>Check this box to hide the Organizer Notes section on the Meeting Status page.</inlineHelpText>
    <label>Hide Organizer Notes on Meeting Status</label>
    <type>Checkbox</type>
</CustomField>