force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hide_Phone_Number_on_CTS__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hide_Phone_Number_on_CTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you do not want the Phone Number field to appear on the Click-to-Schedule page.</description>
    <inlineHelpText>Check this box if you do not want the Phone Number field to appear on the Click-to-Schedule page.</inlineHelpText>
    <label>Hide Phone Number on CTS</label>
    <type>Checkbox</type>
</CustomField>