force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Hours_Per_Day__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Enter &quot;8&quot; for typical installations.  Alter this value only if you have worked with TimeTrade Support to change the length of your work day.</description>
    <inlineHelpText>Enter &quot;8&quot; for typical installations.  Alter this value only if you have worked with TimeTrade Support to change the length of your work day.</inlineHelpText>
    <label>Hours Per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>