force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Include_WebConf_Callout_Details_in_Log__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Include_WebConf_Callout_Details_in_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to include the full contents of requests to and responses from web conferencing providers. This information may aid in investigating issues with web conferencing. The information exposed may include web conferencing credentials.</description>
    <inlineHelpText>Check this box to include the full contents of requests to and responses from web conferencing providers. This information may aid in investigating issues with web conferencing. The information exposed may include web conferencing credentials.</inlineHelpText>
    <label>Include WebConf Callout Details in Log</label>
    <type>Checkbox</type>
</CustomField>