force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Join_Me_API_Secret__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Join_Me_API_Secret__c</fullName>
    <description>Enter your join.me API Secret.  See join.me instructions in the TimeTrade Scheduler Installation documentation and https://developer.join.me/ for details.</description>
    <inlineHelpText>Enter your join.me API Secret.  See join.me instructions in the TimeTrade Scheduler Installation documentation and https://developer.join.me/ for details.</inlineHelpText>
    <label>join.me API Secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>