force-app/main/default/objects/TimeTrade_SF1__TTLinkalatorSettings__c/fields/TimeTrade_SF1__Join_Me_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Join_Me_Redirect_URL__c</fullName>
    <description>Enter https://sfdomain/apex/Timetrade_SF1__AuthenticateJoinMeCredentials where &quot;sfdomain&quot; is the domain of your Salesforce instance.  See join.me instructions in the TimeTrade Scheduler Installation documentation for more information.</description>
    <inlineHelpText>Enter https://sfdomain/apex/Timetrade_SF1__AuthenticateJoinMeCredentials where &quot;sfdomain&quot; is the domain of your Salesforce instance.  See join.me instructions in the TimeTrade Scheduler Installation documentation for more information.</inlineHelpText>
    <label>join.me Callback URL</label>
    <type>Url</type>
</CustomField>